Создание базового Layout

--- a/assets/styles/_mixins.scss
+++ b/assets/styles/_mixins.scss
@@ -1,3 +1,5 @@
-// =================================================================
-// МИКСИНЫ
-// =================================================================
+@mixin media-min($breakpoint) {
+  @media (min-width: $breakpoint) {
+    @content;
+  }
+}
