--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,7 +1,4 @@
-// =================================================================
-// MAIN STYLES
-// =================================================================
-
 @use './variables' as *;
 @use './mixins' as *;
 @use './base' as *;
+@use './layout' as *;
